Fixed issues with Dashboard REST query. The behaviour of the query input textareas has changed: Return submits the query, a new line can be inserted with shift-return.

--- a/structr-ui/src/main/resources/structr/css/main.css
+++ b/structr-ui/src/main/resources/structr/css/main.css
@@ -1826,6 +1826,7 @@ button.add_property {
 
 #queries textarea {
     width: 327px;
+    font-size: 1.3em;
 }
 
 .query-box {
